added changes in html and css

--- a/src/main.html
+++ b/src/main.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 <body>
+    <div class="page-wrapper">
+        <header class="header">
+            <img src="/src/images/logo.svg" alt="logo" class="header__logo">
+            <h1 class="header-title">FIND BEST EVENTS
+                AROUND THE WORLD
+            </h1>
+            <div class="header-searches">
+                <input type="text" placeholder="Start searching" class="header-searches__ticket">
+                <input type="text" placeholder="Choose country" class="header-searches__country">
+            </div>
+        </header>
+        <main class="main"></main>
+        <footer class="footer"></footer>
+    </div>
     <script src="/src/js/main.js"></script>
 </body>
 </html>
