created one card in main and footer

--- a/src/main.html
+++ b/src/main.html
@@ -18,8 +18,17 @@
                 <input type="text" placeholder="Choose country" class="header-searches__country">
             </div>
         </header>
-        <main class="main"></main>
-        <footer class="footer"></footer>
+        <main class="main">
+            <div class="card">
+                <img src="/src/images/" alt="" class="card-img">
+                <h2 class="card-name">Eurovision 2021 finals!</h2>
+                <h3 class="card-date">2021-05-13</h3>
+                <img src="/src/images/location.svg" alt="" class="card-location"><p class="card-location__name">Palace of Ukraine</p>
+            </div>
+        </main>
+        <footer class="footer">
+            <p class="footer-paragr">© 2021 | All Rights Reserved | Developed with ♥ by GoIT Students</p>
+        </footer>
     </div>
     <script src="/src/js/main.js"></script>
 </body>
