added styles for cards

--- a/src/main.html
+++ b/src/main.html
@@ -20,10 +20,10 @@
         </header>
         <main class="main">
             <div class="card">
-                <img src="/src/images/" alt="" class="card-img">
+                <img src="/src/images/Rectangle 6.png" alt="" class="card-img">
                 <h2 class="card-name">Eurovision 2021 finals!</h2>
                 <h3 class="card-date">2021-05-13</h3>
-                <img src="/src/images/location.svg" alt="" class="card-location"><p class="card-location__name">Palace of Ukraine</p>
+                <p class="card-location__name">Palace of Ukraine</p>
             </div>
         </main>
         <footer class="footer">
