--- a/src/main.html
+++ b/src/main.html
@@ -21,6 +21,46 @@
         <main class="main">
             
         </main>
+        <div class="overlay">
+            <div class="modal">
+                <div class="modal-close">
+                    <div class="modal-close-line"></div>
+                    <div class="modal-close-line"></div>
+                </div>
+                <img src="/src/images/Rectangle 6.png" alt="" class="modal-logo">
+                <div class="modal-info">
+                    <img src="/src/images/Rectangle 6.png" alt="" class="modal-poster">
+                    <div class="modal-info-data">
+                        <h3 class="modal-info-data-title">INFO</h3>
+                        <p class="modal-info-data-subtitle">Atlas Weekend is the largest music festival
+                            in Ukraine.More than 200 artists will create
+                            a proper music festival atmosphere on 10 stages</p>
+
+                        <h3 class="modal-info-data-title">WHEN</h3>
+                        <p class="modal-info-data-subtitle">2021-06-09</p>
+                        <p class="modal-info-data-subtitle">20:00 (Kyiv/Ukraine)</p>
+
+                        <h3 class="modal-info-data-title">WHERE </h3>
+                        <p class="modal-info-data-subtitle">Kyiv, Ukraine </p>
+                        <p class="modal-info-data-subtitle">VDNH</p>
+
+                        <h3 class="modal-info-data-title">WHO</h3>
+                        <p class="modal-info-data-subtitle">The Black Eyed Peas</p>
+
+                        <h3 class="modal-info-data-title">PRICES </h3>
+                        <p class="modal-info-data-subtitle">
+                            <img src="/src/images/barcode.svg" alt="" class="modal-barcode">Standart 300-500 UAH
+                        </p>
+                        <button class="modal-info-data-buy">BUY TICKETS</button>
+
+                        <p class="modal-info-data-subtitle">
+                            <img src="/src/images/barcode.svg" alt="" class="modal-barcode">VIP 1000-1500 UAH</p>
+                        <button class="modal-info-data-buy">BUY TICKETS</button>
+                    </div>
+                </div>
+                <button class="modal-more">MORE FROM THIS AUTHOR</button>
+            </div>
+        </div>
         <footer class="footer">
             <p class="footer-paragr">© 2021 | All Rights Reserved | Developed with ♥ by GoIT Students</p>
         </footer>
