did styles for modal litle bit

--- a/src/main.html
+++ b/src/main.html
@@ -37,11 +37,11 @@
                             a proper music festival atmosphere on 10 stages</p>
 
                         <h3 class="modal-info-data-title">WHEN</h3>
-                        <p class="modal-info-data-subtitle">2021-06-09</p>
+                        <p class="modal-info-data-subtitle date">2021-06-09</p>
                         <p class="modal-info-data-subtitle">20:00 (Kyiv/Ukraine)</p>
 
                         <h3 class="modal-info-data-title">WHERE </h3>
-                        <p class="modal-info-data-subtitle">Kyiv, Ukraine </p>
+                        <p class="modal-info-data-subtitle place">Kyiv, Ukraine </p>
                         <p class="modal-info-data-subtitle">VDNH</p>
 
                         <h3 class="modal-info-data-title">WHO</h3>
@@ -49,7 +49,7 @@
 
                         <h3 class="modal-info-data-title">PRICES </h3>
                         <p class="modal-info-data-subtitle">
-                            <img src="/src/images/barcode.svg" alt="" class="modal-barcode">Standart 300-500 UAH
+                            <img src="/src/images/barcode.svg" alt="" class="modal-barcode price">Standart 300-500 UAH
                         </p>
                         <button class="modal-info-data-buy">BUY TICKETS</button>
 
