deleted general folder for all files

--- a/main.html
+++ b/main.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/src/styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <div class="page-wrapper">
         <header class="header">
-            <img src="/src/images/logo.svg" alt="logo" class="header__logo">
+            <img src="/images/logo.svg" alt="logo" class="header__logo">
             <h1 class="header-title">FIND BEST EVENTS
                 AROUND THE WORLD
             </h1>
@@ -27,9 +27,9 @@
                     <div class="modal-close-line"></div>
                     <div class="modal-close-line"></div>
                 </div>
-                <img src="/src/images/Rectangle 6.png" alt="" class="modal-logo">
+                <img src="/images/Rectangle 6.png" alt="" class="modal-logo">
                 <div class="modal-info">
-                    <img src="/src/images/Rectangle 6.png" alt="" class="modal-poster">
+                    <img src="/images/Rectangle 6.png" alt="" class="modal-poster">
                     <div class="modal-info-data">
                         <h3 class="modal-info-data-title">INFO</h3>
                         <p class="modal-info-data-subtitle">Atlas Weekend is the largest music festival
@@ -49,12 +49,12 @@
 
                         <h3 class="modal-info-data-title">PRICES </h3>
                         <p class="modal-info-data-subtitle">
-                            <img src="/src/images/barcode.svg" alt="" class="modal-barcode price">Standart 300-500 UAH
+                            <img src="/images/barcode.svg" alt="" class="modal-barcode price">Standart 300-500 UAH
                         </p>
                         <button class="modal-info-data-buy">BUY TICKETS</button>
 
                         <p class="modal-info-data-subtitle">
-                            <img src="/src/images/barcode.svg" alt="" class="modal-barcode">VIP 1000-1500 UAH</p>
+                            <img src="/images/barcode.svg" alt="" class="modal-barcode">VIP 1000-1500 UAH</p>
                         <button class="modal-info-data-buy">BUY TICKETS</button>
                     </div>
                 </div>
@@ -65,6 +65,6 @@
             <p class="footer-paragr">© 2021 | All Rights Reserved | Developed with ♥ by GoIT Students</p>
         </footer>
     </div>
-    <script src="/src/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
