--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
             </div>
         </div>
         <footer class="footer">
+            <div class="footer-pagination">
+                <p class="footer-pagination-page">1</p>
+                <p class="footer-pagination-page">2</p>
+                <p class="footer-pagination-page">3</p>
+                <p class="footer-pagination-page">4</p>
+                <p class="footer-pagination-page active-page">5</p>
+                <p class="footer-pagination-page">6</p>
+                <p class="footer-pagination-page">7</p>
+                <p class="footer-pagination-page">8</p>
+                <p class="footer-pagination-page">9</p>
+                <p class="footer-pagination-page">10</p>
+            </div>
             <p class="footer-paragr">© 2021 | All Rights Reserved | Developed with ♥ by GoIT Students</p>
         </footer>
     </div>
