--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https://fonts.googleapis.com https://fonts.gstatic.com https://bcheban.github.io; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data:; script-src 'self' 'unsafe-inline';">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Event Booster</title>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https://fonts.googleapis.com https://fonts.gstatic.com;">
-  <meta http-equiv="Content-Security-Policy-Report-Only" content="default-src 'self'; font-src 'self' data: https://fonts.googleapis.com https://fonts.gstatic.com;">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
