--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self'; 
+  font-src 'self' data: https://fonts.googleapis.com https://fonts.gstatic.com https://bcheban.github.io; 
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
+  img-src 'self' data:; 
+  script-src 'self' 'unsafe-inline';
+  connect-src 'self' https://app.ticketmaster.com; /* <-- ADD THIS */
+">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Event Booster</title>
