--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
   img-src 'self' data:; 
   script-src 'self' 'unsafe-inline';
-  connect-src 'self' https://app.ticketmaster.com; /* <-- ADD THIS */
+  connect-src 'self' https://app.ticketmaster.com;
 ">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
