--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   default-src 'self'; 
   font-src 'self' data: https://fonts.googleapis.com https://fonts.gstatic.com https://bcheban.github.io; 
   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
-  img-src 'self' data:; 
-  script-src 'self' 'unsafe-inline';
+  img-src 'self' data: https://s1.ticketm.net;
+  script-src 'self' 'unsafe-inline'; 
   connect-src 'self' https://app.ticketmaster.com;
 ">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
